welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: ';' expected but 'if' found.
	} if(vuBiscuit() == false){
          ^