welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	if(!estFaceMur){
		avance()}else{for(x<-1 to 7){
			recule();
		}
	} if(vuBiscuit() == false){
		return false;
	}else{
		return true;
	}
}
